
[project]
name = "migdalor"
version = "0.0.1.dev"
description = ""
authors = [
    {name = "Roman Glushko", email = "roman.glushko.m@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.267",
    "mypy>=1.3.0",
    "pytest>=7.3.1",
    "black>=23.3.0",
]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.ruff]
line-length = 120
