
[project]
name = "migdalor"
description = "A cluster membership library for modern asyncio Python distributed systems running in Kubernetes"
authors = [
    {name = "Roman Glushko", email = "roman.glushko.m@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

keywords = [
    "peer discovery",
    "kubernetes",
    "service-discovery",
    "cluster-membership-management"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/roma-glushko/migdalor"
Source = "https://github.com/roma-glushko/migdalor"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "migdalor/__version__.py" }

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.267",
    "mypy>=1.3.0",
    "pytest>=7.3.1",
    "black>=23.3.0",
]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.ruff]
line-length = 120
